--- a/VERSUS 5/VERSUS/Base.lproj/Main.storyboard
+++ b/VERSUS 5/VERSUS/Base.lproj/Main.storyboard
@@ -305,6 +305,10 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="loginbutton" destination="Jix-o6-0mK" id="niH-bW-KXi"/>
+                        <outlet property="signinbutton" destination="PpQ-WO-tfr" id="OaE-uk-1Cu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qLU-2m-NYa">
