--- a/VERSUS 5/VERSUS/Base.lproj/Main.storyboard
+++ b/VERSUS 5/VERSUS/Base.lproj/Main.storyboard
@@ -604,6 +604,40 @@
             </objects>
             <point key="canvasLocation" x="-3855.0724637681164" y="-352.23214285714283"/>
         </scene>
+        <!--CameraDetail-->
+        <scene sceneID="0PN-Y6-io5">
+            <objects>
+                <viewController title="CameraDetail" id="hKW-he-M3X" customClass="CameraDetailViewController" customModule="VERSUS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WAk-GU-nWl">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Image URL" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="n1v-Sw-ILN">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="YbT-re-O0a" firstAttribute="bottom" secondItem="n1v-Sw-ILN" secondAttribute="bottom" id="O6O-Jg-PSD"/>
+                            <constraint firstItem="n1v-Sw-ILN" firstAttribute="top" secondItem="YbT-re-O0a" secondAttribute="top" id="jro-KC-Ra2"/>
+                            <constraint firstItem="YbT-re-O0a" firstAttribute="trailing" secondItem="n1v-Sw-ILN" secondAttribute="trailing" id="lC8-tl-JPO"/>
+                            <constraint firstItem="n1v-Sw-ILN" firstAttribute="leading" secondItem="YbT-re-O0a" secondAttribute="leading" id="pHt-XB-ft0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="YbT-re-O0a"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Camera " largeTitleDisplayMode="always" id="adv-JA-E0s"/>
+                    <connections>
+                        <outlet property="imageURLTextView" destination="n1v-Sw-ILN" id="SmB-Vl-PFk"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9QO-9f-evW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2683" y="453"/>
+        </scene>
         <!--Camera-->
         <scene sceneID="ACP-fg-CpQ">
             <objects>
@@ -612,13 +646,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M7d-Yf-1Kh">
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M7d-Yf-1Kh">
                                 <rect key="frame" x="0.0" y="20" width="414" height="396"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.70683807134628296" green="0.29548722505569458" blue="0.080474711954593658" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PPO-zE-FNT">
-                                <rect key="frame" x="155" y="424" width="122" height="42"/>
+                                <rect key="frame" x="14" y="424" width="122" height="42"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <color key="tintColor" red="0.85458675009999996" green="0.35071620339999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <state key="normal">
@@ -636,21 +670,26 @@
                                     <action selector="selectButtonTapped:" destination="0ku-9I-lUn" eventType="touchUpInside" id="Eil-Aa-gJB"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="VALUE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ajC-l2-w4B">
-                                <rect key="frame" x="143" y="692" width="128" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="0.28062454380000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pxB-Db-mjN">
-                                <rect key="frame" x="160" y="531" width="117" height="49"/>
+                                <rect key="frame" x="149" y="555" width="117" height="49"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="UPLOAD"/>
                                 <connections>
                                     <action selector="uploadImageButton:" destination="0ku-9I-lUn" eventType="touchUpInside" id="G3h-UZ-7iL"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vbp-zw-FL3">
+                                <rect key="frame" x="289" y="425" width="111" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Camera "/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="VALUE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ajC-l2-w4B">
+                                <rect key="frame" x="143" y="676" width="128" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="0.28062454380000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Sgp-rH-YbK"/>
@@ -660,6 +699,7 @@
                         <outlet property="imageView" destination="M7d-Yf-1Kh" id="A8v-uq-QrT"/>
                         <outlet property="selectButton" destination="PPO-zE-FNT" id="55J-41-3iA"/>
                         <outlet property="valueRequest" destination="ajC-l2-w4B" id="Kj0-Fy-P0o"/>
+                        <segue destination="hKW-he-M3X" kind="show" identifier="detailsseg" id="lgm-Cj-3AZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3LB-iB-VS7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -978,8 +1018,8 @@
         <image name="trouble" width="540" height="960"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="cJZ-3t-DEV"/>
-        <segue reference="i5f-l5-Ixv"/>
+        <segue reference="DPI-xi-Jr0"/>
+        <segue reference="VYR-LM-t7G"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.63291164339999995" green="0.4067102447" blue="0.1507934712" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
 </document>
